Replaced Nearest-Neighnorhood algorithm for Spike Sorting with Bayesian Classifier

--- a/SpikeSorter/Makefile
+++ b/SpikeSorter/Makefile
@@ -7,16 +7,16 @@ endif
 CC = $(shell rtai-config --cc)
 LXRT_CFLAGS = $(shell rtai-config --lxrt-cflags)
 LXRT_LDFLAGS = $(shell rtai-config --lxrt-ldflags)
-COMEDI_FLAGS = -lcomedi -lm 
+COMEDI_FLAGS = -lcomedi -lm -lmeschach
 GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: SpikeSorter
 
-SpikeSorter: SpikeSorter.c Gui.o 
-	$(CC) $(LXRT_CFLAGS) -o $@ $< Gui.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+SpikeSorter: SpikeSorter.c Gui.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< Gui.o  $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
 Gui.o: Gui.c 
-	$(CC) $(LXRT_CFLAGS) -c -o $@ $< $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+	$(CC) $(LXRT_CFLAGS) -c -o $@ $<  $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
 clean:
 	rm -f *.o SpikeSorter
