New SpikeSorter development (ongoing)

--- a/SpikeSorter/Makefile
+++ b/SpikeSorter/Makefile
@@ -12,11 +12,8 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: SpikeSorter
 
-SpikeSorter: SpikeSorter.c Gui.o
-	$(CC) $(LXRT_CFLAGS) -o $@ $< Gui.o  $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
-
-Gui.o: Gui.c 
-	$(CC) $(LXRT_CFLAGS) -c -o $@ $<  $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+SpikeSorter: SpikeSorter.c
+	$(CC) $(LXRT_CFLAGS) -o $@ $< $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
 clean:
 	rm -f *.o SpikeSorter
