Templates for data file version read/write support.

--- a/Recorder/Makefile
+++ b/Recorder/Makefile
@@ -12,10 +12,17 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: Recorder
 
-Recorder: Recorder.c
-	$(CC) $(LXRT_CFLAGS) -o $@ $< $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+Recorder: Recorder.c DataFormat/DataFormat.o DataFormat/v0/DataFormat_v0.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< DataFormat/DataFormat.o DataFormat/v0/DataFormat_v0.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+
+
+DataFormat/DataFormat.o: DataFormat/DataFormat.c 
+	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 
+
+DataFormat/v0/DataFormat_v0.o: DataFormat/v0/DataFormat_v0.c
+	$(CC)  $(LXRT_CFLAGS) -c -o $@ $< $(GTK_FLAGS) 
 
 clean:
-	rm -f *.o Recorder
+	rm -f *.o Recorder DataFormat/DataFormat.o DataFormat/v0/DataFormat_v0.o
 
 .PHONY: clean
