Implemented configuration file loading for SpikeViewer and SpikeSorter.

--- a/SpikeViewer/Makefile
+++ b/SpikeViewer/Makefile
@@ -12,10 +12,22 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: SpikeViewer
 
-SpikeViewer: SpikeViewer.c
-	$(CC) $(LXRT_CFLAGS) -o $@ $< $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+SpikeViewer: SpikeViewer.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Misc/Misc.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Misc/Misc.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+
+../DataHandling/DataHandling.o: ../DataHandling/DataHandling.c 
+	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 
+	
+../DataHandling/v0/Buffer_v0.o: ../DataHandling/v0/Buffer_v0.c 
+	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 	
+
+../DataHandling/v0/DataFormat_v0.o: ../DataHandling/v0/DataFormat_v0.c
+	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 
+	
+../Misc/Misc.o: ../Misc/Misc.c
+	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 	
 
 clean:
-	rm -f *.o SpikeViewer
+	rm -f *.o SpikeViewer ../DataHandling/DataHandling.o ../DataHandling/v0/Buffer_v0.o ../DataHandling/v0/DataFormat_v0.o ../Misc/Misc.o
 
 .PHONY: clean
