created Randn.c and reorganized '/Misc' s path.

--- a/ConfigDaq/Makefile
+++ b/ConfigDaq/Makefile
@@ -12,8 +12,8 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: ConfigDaq
 
-ConfigDaq: ConfigDaq.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Misc/Misc.o ../Interrogate/Interrogate.o
-	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Misc/Misc.o ../Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+ConfigDaq: ConfigDaq.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Interrogate/Interrogate.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
 ../DataHandling/DataHandling.o: ../DataHandling/DataHandling.c 
 	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 
@@ -24,13 +24,13 @@ ConfigDaq: ConfigDaq.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFor
 ../DataHandling/v0/DataFormat_v0.o: ../DataHandling/v0/DataFormat_v0.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 
 	
-../Misc/Misc.o: ../Misc/Misc.c
+../Library/Misc/Misc.o: ../Library/Misc/Misc.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 	
 	
 ../Interrogate/Interrogate.o: ../Interrogate/Interrogate.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 		
 
 clean:
-	rm -f *.o ConfigDaq ../DataHandling/*.o ../DataHandling/v0/*.o ../Misc/*.o ../Interrogate/*.o
+	rm -f *.o ConfigDaq ../DataHandling/*.o ../DataHandling/v0/*.o ../Library/Misc/*.o ../Interrogate/*.o
 
 .PHONY: clean
