--- a/Recorder/Makefile
+++ b/Recorder/Makefile
@@ -12,8 +12,8 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: Recorder
 
-Recorder: Recorder.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Misc/Misc.o ../Interrogate/Interrogate.o
-	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Misc/Misc.o ../Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+Recorder: Recorder.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Interrogate/Interrogate.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
 ../DataHandling/DataHandling.o: ../DataHandling/DataHandling.c 
 	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 
@@ -24,7 +24,7 @@ Recorder: Recorder.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataForma
 ../DataHandling/v0/DataFormat_v0.o: ../DataHandling/v0/DataFormat_v0.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 
 	
-../Misc/Misc.o: ../Misc/Misc.c
+../Library/Misc/Misc.o: ../Library/Misc/Misc.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 	
 
 ../Interrogate/Interrogate.o: ../Interrogate/Interrogate.c
@@ -32,6 +32,6 @@ Recorder: Recorder.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataForma
 	
 
 clean:
-	rm -f *.o Recorder ../DataHandling/*.o ../DataHandling/v0/*.o ../Misc/*.o ../Interrogate/*.o
+	rm -f *.o Recorder ../DataHandling/*.o ../DataHandling/v0/*.o ../Library/Misc/*.o ../Interrogate/*.o
 
 .PHONY: clean
