--- a/SpikeViewer/Makefile
+++ b/SpikeViewer/Makefile
@@ -12,8 +12,8 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: SpikeViewer
 
-SpikeViewer: SpikeViewer.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Interrogate/Interrogate.o
-	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+SpikeViewer: SpikeViewer.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Library/Interrogate/Interrogate.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Library/Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
 ../DataHandling/DataHandling.o: ../DataHandling/DataHandling.c 
 	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 
@@ -27,10 +27,10 @@ SpikeViewer: SpikeViewer.c ../DataHandling/DataHandling.o ../DataHandling/v0/Dat
 ../Library/Misc/Misc.o: ../Library/Misc/Misc.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 
 
-../Interrogate/Interrogate.o: ../Interrogate/Interrogate.c
+../Library/Interrogate/Interrogate.o: ../Library/Interrogate/Interrogate.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 	
 
 clean:
-	rm -f *.o SpikeViewer ../DataHandling/DataHandling.o ../DataHandling/v0/Buffer_v0.o ../DataHandling/v0/DataFormat_v0.o ../Misc/Misc.o ../Interrogate/*.o
+	rm -f *.o SpikeViewer ../DataHandling/DataHandling.o ../DataHandling/v0/Buffer_v0.o ../DataHandling/v0/DataFormat_v0.o ../Misc/Misc.o ../Library/Interrogate/*.o
 
 .PHONY: clean
