moved DataHandling into /Library

--- a/SpikeViewer/Makefile
+++ b/SpikeViewer/Makefile
@@ -12,16 +12,16 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: SpikeViewer
 
-SpikeViewer: SpikeViewer.c ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Library/Interrogate/Interrogate.o
-	$(CC) $(LXRT_CFLAGS) -o $@ $< ../DataHandling/DataHandling.o ../DataHandling/v0/DataFormat_v0.o ../DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Library/Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+SpikeViewer: SpikeViewer.c ../Library/DataHandling/DataHandling.o ../Library/DataHandling/v0/DataFormat_v0.o ../Library/DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Library/Interrogate/Interrogate.o
+	$(CC) $(LXRT_CFLAGS) -o $@ $< ../Library/DataHandling/DataHandling.o ../Library/DataHandling/v0/DataFormat_v0.o ../Library/DataHandling/v0/Buffer_v0.o ../Library/Misc/Misc.o ../Library/Interrogate/Interrogate.o $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
 
-../DataHandling/DataHandling.o: ../DataHandling/DataHandling.c 
+../Library/DataHandling/DataHandling.o: ../Library/DataHandling/DataHandling.c 
 	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 
 	
-../DataHandling/v0/Buffer_v0.o: ../DataHandling/v0/Buffer_v0.c 
+../Library/DataHandling/v0/Buffer_v0.o: ../Library/DataHandling/v0/Buffer_v0.c 
 	$(CC)  $(LXRT_CFLAGS) -c -o $@ $<   $(GTK_FLAGS) 	
 
-../DataHandling/v0/DataFormat_v0.o: ../DataHandling/v0/DataFormat_v0.c
+../Library/DataHandling/v0/DataFormat_v0.o: ../Library/DataHandling/v0/DataFormat_v0.c
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 
 	
 ../Library/Misc/Misc.o: ../Library/Misc/Misc.c
@@ -31,6 +31,6 @@ SpikeViewer: SpikeViewer.c ../DataHandling/DataHandling.o ../DataHandling/v0/Dat
 	$(CC)  $(LXRT_CFLAGS)  -c -o $@ $< $(GTK_FLAGS) 	
 
 clean:
-	rm -f *.o SpikeViewer ../DataHandling/DataHandling.o ../DataHandling/v0/Buffer_v0.o ../DataHandling/v0/DataFormat_v0.o ../Misc/Misc.o ../Library/Interrogate/*.o
+	rm -f *.o SpikeViewer ../Library/DataHandling/*.o ../Library/DataHandling/v0/*.o ../Misc/Misc.o ../Library/Interrogate/*.o
 
 .PHONY: clean
