Modification for 64-bit machine.

--- a/KernelSpike/Makefile
+++ b/KernelSpike/Makefile
@@ -2,7 +2,7 @@ obj-m   := KernelSpike.o
 
 KDIR    := /lib/modules/$(shell uname -r)/build
 PWD     := $(shell pwd)
-EXTRA_CFLAGS := -I/usr/realtime/include -I/usr/include/ -I/usr/local/include -ffast-math -mhard-float 
+EXTRA_CFLAGS := -I/usr/realtime/include -I/usr/include/ -I/usr/local/include -ffast-math -mhard-float -msse
 
 default:
 	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules 
