implemented new RtTaskStatsViewer to display performance for every task.Spike Sorter seems to work.

--- a/RtTaskStatsViewer/Makefile
+++ b/RtTaskStatsViewer/Makefile
@@ -7,15 +7,18 @@ endif
 CC = $(shell rtai-config --cc)
 LXRT_CFLAGS = $(shell rtai-config --lxrt-cflags)
 LXRT_LDFLAGS = $(shell rtai-config --lxrt-ldflags)
-COMEDI_FLAGS = -lcomedi -lm 
+MATH_FLAGS = -lm
 GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: RtTaskStatsViewer
 
-RtTaskStatsViewer: RtTaskStatsViewer.c 
-	$(CC) $(LXRT_CFLAGS) -o $@ $< $(LXRT_LDFLAGS) $(COMEDI_FLAGS) $(GTK_FLAGS) 
+RtTaskStatsViewer: RtTaskStatsViewer.c ../Library/Misc/Misc.o 
+	$(CC) $(LXRT_CFLAGS) $(LXRT_LDFLAGS) $(MATH_FLAGS) $(GTK_FLAGS) -o $@ $< ../Library/Misc/Misc.o 
+
+../Library/Misc/Misc.o: ../Library/Misc/Misc.c
+	$(CC) $(LXRT_CFLAGS) -c -o $@ $< $(LXRT_LDFLAGS) $(GTK_FLAGS)			### ../Library/Misc/Misc
 
 clean:
-	rm -f *.o RtTaskStatsViewer
+	rm -f *.o RtTaskStatsViewer ../Library/Misc/*.o
 
 .PHONY: clean
