Config file saving for SpikeViewer and SpikeSorter implemented.

--- a/SpikeSorter/Makefile
+++ b/SpikeSorter/Makefile
@@ -12,14 +12,20 @@ GTK_FLAGS = $(shell pkg-config --cflags --libs gtk+-2.0 gtkdatabox)
 
 all: SpikeSorter
 
-SpikeSorter: SpikeSorter.c ../Library/Misc/Misc.o ../Library/Messages/TempMat2KrnlSpk.o
-	$(CC) $(LXRT_CFLAGS) $(LXRT_LDFLAGS) $(MATH_FLAGS) $(GTK_FLAGS) -o $@ $< ../Library/Misc/Misc.o ../Library/Messages/TempMat2KrnlSpk.o
+SpikeSorter: SpikeSorter.c ../Library/Misc/Misc.o ../Library/Messages/TempMat2KrnlSpk.o FileHandler.o FileHandler_v0.o
+	$(CC) $(LXRT_CFLAGS) $(LXRT_LDFLAGS) $(MATH_FLAGS) $(GTK_FLAGS) -o $@ $< ../Library/Misc/Misc.o ../Library/Messages/TempMat2KrnlSpk.o FileHandler.o FileHandler_v0.o
 
 ../Library/Misc/Misc.o: ../Library/Misc/Misc.c
 	$(CC) $(LXRT_CFLAGS) -c -o $@ $< $(LXRT_LDFLAGS) $(GTK_FLAGS)			### ../Library/Misc/Misc	
 
 ../Library/Messages/TempMat2KrnlSpk.o: ../Library/Messages/TempMat2KrnlSpk.c
 	$(CC) $(LXRT_CFLAGS) -c -o $@ $< $(LXRT_LDFLAGS) $(GTK_FLAGS)			### ../Library/Messages/TempMat2KrnlSpk
+
+FileHandler.o: FileHandler.c
+	$(CC) $(LXRT_CFLAGS) -c -o $@ $< $(LXRT_LDFLAGS) $(GTK_FLAGS)			### FileHandler
+
+FileHandler_v0.o: FileHandler_v0.c
+	$(CC) $(LXRT_CFLAGS) -c -o $@ $< $(LXRT_LDFLAGS) $(GTK_FLAGS)			### FileHandler_v0
 
 clean:
 	rm -f *.o SpikeSorter ../Library/Misc/*.o ../Library/Messages/*.o
